<resources>
    <string name="app_name">ad hoc Database</string>
    <string name="app_name_x">ad hoc Database</string>
    <string name="create_table_name">Table Name</string>
    <string name="create_table_table_name_placeholder">Table Name</string>
    <string name="create_table_description_hint">Table Description</string>
    <string name="create_table_table_description_placeholder">Description</string>
    <string name="Columns">Columns</string>
    <string name="create_table_columns_hint">Table Column-Count</string>
    <string name="create_table_button_save">Save</string>
    <string name="create_table_button_clear">Clear</string>
    <string name="table_title_dummy" translatable="false">Table Title Dummy</string>
    <string name="table_description_dummy" translatable="false">Dr Peppers</string>

    <string name="create_table_column_names">Column Names</string>


    <string name="create_table_dialog_header">Create Table</string>
    <string name="create_table_dialog_body" translatable="false">BODY BODY BODY BODY BODY BODY BODY BODY BODY BODY BODY BODY </string>

    <string name="dialog_agree">Agree</string>
    <string name="dialog_disagree">Disagree</string>

    <string name="table_cell_text_placeholder" translatable="false">--PLACEHOLDER--</string>
    <string name="table_list_image_description">Table Image</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="menu_search">Search</string>
    <string name="change_name">Change Name</string>
    <string name="edit_table">Edit Table</string>
    <string name="change_table_description">Change Description</string>
    <string name="delete_table">Delete Table</string>
    <string name="editTableName">Change Table Name</string>
    <string name="editTable_Description">Change Table Description</string>
    <string name="editTableDelete">Delete Table</string>
    <string name="editNoteDelete">Delete Note</string>
    <string name="editImageDelete">Delete Image</string>
    <string name="editTableDeleteWarning">Are you sure you want to delete this Table?</string>
    <string name="editNoteDeleteWarning">Are you sure you want to delete this Note?</string>
    <string name="editImageDeleteWarning">Are you sure you want to delete this Image?</string>
    <string name="unit">Unit</string>
    <string name="create_table_clear_title">Clear Inputs</string>
    <string name="create_table_clear_input_dialog_body">Are you sure you want to Clear your Inputs?</string>
    <string name="edit_cell_value">Change Cell</string>
    <string name="change_cell_value">Change Value</string>
    <string name="change_cell_type">Change Type</string>
    <string name="delete_row">Delete Row</string>
    <string name="edit_column_value">Change Column</string>
    <string name="change_column_name">Change Column Name</string>
    <string name="delete_column">Delete Column</string>
    <string name="delete_column_dialog_body">Are you sure you want to delete this Column?</string>
    <string name="editCellValue">Change Cell Value</string>
    <string name="editCellType">Change Cell Type</string>
    <string name="editRowDelete">Delete Table</string>
    <string name="editRowDeleteWarning">Are you sure you want to delete this Row?</string>
    <string name="editColumnName">Change Column Name</string>
    <string name="change_table_column_add">Add additional Column</string>
    <string name="addColumn">Add Column</string>
    <string name="edit_table_add_dialog">Table</string>
    <string name="change_table_add_dataset">Add Row</string>
    <string name="change_table_add_column">Add Column</string>
    <string name="add">Add</string>
    <string name="function">Functions</string>
    <string name="func_sum">Sum</string>
    <string name="func_avg">Average</string>
    <string name="aggregationTitle">Aggregation</string>
    <string name="table">Table</string>
    <string name="images">Images</string>
    <string name="notes">Notes</string>

    <string name="create_table">Create Table</string>
    <string name="set_column_names">Set Column Names</string>
    <string name="add_dataset">Add Row</string>
    <string name="table_overview">Table Overview</string>
    <string name="table_view">Table View</string>
    <string name="image_home">Image Overview</string>
    <string name="image_show">Image</string>
    <string name="notes_home">Notes Overview</string>
    <string name="notes_create">Create Note</string>
    <string name="create_note_name_placeholder">Note Name</string>
    <string name="note_description">Note</string>
    <string name="notes_show">Note</string>
    <string name="update">Update</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_note">Edit Note</string>
    <string name="editNoteName">Change Note Name</string>
    <string name="change_note_description">Change Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="edit_image">Edit Image</string>
    <string name="delete_image">Delete Image</string>

    <string name="unit_string">Text</string>
    <string name="unit_euro">Euro</string>
    <string name="func_calculate_sum">Calculate Sum</string>
    <string name="func_calculate_avg">Calculate Average</string>
</resources>

