<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp"
        android:layout_margin="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/edit_cell_value"
            android:textColor="@color/colorText"
            android:textStyle="bold|italic" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_cell_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0px"
            android:layout_marginTop="0px"
            android:backgroundTint="@color/colorButtonPrimary"
            android:text="@string/change_cell_value"
            android:textColor="@color/colorOnButtonPrimary" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0.35"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_cell_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0px"
            android:layout_marginTop="0px"
            android:backgroundTint="@color/colorButtonSecondary"
            android:text="@string/change_cell_type"
            android:textColor="@color/colorOnButtonPrimary" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0.35"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/chang_row_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0px"
            android:layout_marginTop="0px"
            android:backgroundTint="@color/colorOnButtonDanger"
            android:text="@string/delete_row"
            android:textColor="@color/colorOnButtonPrimary" />
    </LinearLayout>
</FrameLayout>
