<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonGroup"
        android:orientation="vertical"
        tools:context=".ui.notes.create.NoteCreateActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNoteName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/create_note_name_placeholder"
            android:inputType="text"
            app:boxStrokeColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderText="@string/create_note_name_placeholder"
            app:startIconTintMode="src_in">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTableName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/note_description"
            android:inputType="text"
            app:boxStrokeColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderText="@string/note_description"
            app:startIconTintMode="src_in"
            android:gravity="top|left">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|left"
                android:lines="8"
                android:minLines="6"
                android:scrollbars="vertical"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_nav"
        android:baselineAligned="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtonSecondary"
            android:onClick="onCancelButtonClick"
            android:text="@string/cancel"
            android:textColor="@color/colorOnButtonPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtonPrimary"
            android:onClick="onSubmitButtonClick"
            android:text="@string/submit"
            android:textColor="@color/colorOnButtonPrimary" />
    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_navigation_menu" />
</RelativeLayout>